deployment/chaincode-rest-deployment.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: chaincode-rest-deployment
spec:
  selector:
    matchLabels:
      app: chaincode-rest
  replicas: 1
  template:
    metadata:
      labels:
        app: chaincode-rest
    spec:
      volumes:
      - name: sharedvolume
        persistentVolumeClaim:
          claimName: common-pvc
      containers:
      - name: chaincode-rest
        image: lgsvl/data-marketplace-chaincode-rest:ci
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
        volumeMounts:
        - mountPath: /shared
          name: sharedvolume
