deployment/chaincode-rest-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chaincode-rest-service
  labels:
    app: chaincode-rest
spec:
  ports:
    - port: 9090
      name: http
      targetPort: 9090
  type: LoadBalancer
  selector:
    app: chaincode-rest
